Table users {
    id uuid [primary key]
    name varchar
    surname varchar
    last_name varchar
    login varchar [not null, unique]
    password varchar [not null, note: 'hash' ]
    registered_at timestamp
    photo_id uuid
    failed_attempts_count integer
    is_deleted boolean
}

Table revoked_tokens {
    id uuid [primary key]
    access_token varchar
    revoked_at datetime
}

Table images {
    id uuid [primary key]
    image_name varchar
    image_data longblob
}
Ref: users.photo_id > images.id

// Depricated. Instead JWT
// Table auth_sessions {
//     sid uuid [primary key]
//     expired timestamp
//     status varchar
//     user_id uuid
// } 
// Ref: auth_sessions.user_id > users.id
 
Table group_enter_requests {
    id uuid [primary key]
    user_id uuid
    group_id uuid
    is_approved boolean
    datetime datetime
}

Table group_participants {
    id uuid [primary key]
    user_id uuid
    group_id uuid
}

Table groups {
    id uuid [primary key]
    creator_id uuid
    name varchar
    description varchar
    is_open boolean
    max_participants_count integer
    is_deleted boolean
}

Ref: groups.creator_id > users.id
Ref: group_participants.user_id > users.id
Ref: group_participants.group_id > groups.id
Ref: group_enter_requests.user_id > users.id
Ref: group_enter_requests.group_id > groups.id

Table slot_participants {
    id uuid [primary key]
    user_id uuid
    slot_id uuid
    is_attended boolean
    is_paid boolean
    custom json
}

Table slots {
    id uuid [primary key]
    creator_id uuid
    repeat_id uuid
    name varchar
    description varchar
    is_open boolean
    datetime datetime
    max_participants_count integer
}  
Ref: slots.creator_id > users.id 
Ref: slots.repeat_id > rapids.id

Table rapids {
    id uuid [primary key]
    start_date date
    start_time time
    end_time time
    weekdays array [null]
    months array [null]
}

Ref: slot_participants.user_id > users.id
Ref: slot_participants.slot_id > slots.id


Table events { 
    id uuid [primary key]
    template_id uuid

    group_id uuid
    repeat_id uuid
    name varchar
    description varchar
    price varchar
}
Ref: events.repeat_id > rapids.id




Table event_participants {
    id uuid [primary key]
    event_id uuid
    participant_id uuid
    is_attended boolean
    is_paid boolean
    custom json
}
Ref: event_participants.event_id > events.id
Ref: event_participants.participant_id > group_participants.id 